<resources>
    <string name="app_name">MyShelf</string>
    <string name="main_drawer_home">홈</string>
    <string name="main_drawer_favorite">즐겨찾기</string>
    <string name="main_drawer_group_contact_github">Github</string>
    <string name="main_drawer_group_contact_email">Email</string>
    <string name="main_drawer_group_contact_title">Contact</string>
    <string name="drawer_menu_button">메뉴 서랍 버튼</string>
    <string name="main_menu_searchbar">주제 검색</string>
</resources>