<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/main_drawer_home"
        android:title="@string/main_drawer_home"
        android:checked="true"
        android:icon="@drawable/ic_baseline_home_24"    />
    <item android:id="@+id/main_drawer_favorite"
        android:title="@string/main_drawer_favorite"
        android:icon="@drawable/ic_baseline_star_24"    />
</group>
    <item android:title="@string/main_drawer_group_contact_title" >
        <menu>
    <item android:id="github"
        android:title="@string/main_drawer_group_contact_github"
        android:icon="@drawable/ic_baseline_git_24_background"/>
    <item android:id="email"
        android:title="@string/main_drawer_group_contact_email"
        android:icon="@drawable/ic_baseline_email_24" />
</menu>
</item>
</menu>
